--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   background: #f8f8ff;
   color: #333333;
@@ -28,6 +30,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 20px 0;
 }
 
 .logo {
@@ -50,7 +53,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: #333333;
-  font-size: 16px;
+  font-size: 24px;
   position: relative;
 }
 
@@ -82,14 +85,18 @@ nav ul li a:hover::after {
   color: #1e90ff;
 }
 
+/*--------- about -------- */
+
 #about {
   padding: 80px 0;
+  height: 100vh;
 }
 
 .row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  height: 100vh;
 }
 
 .about-col-1 {
@@ -98,6 +105,8 @@ nav ul li a:hover::after {
 
 .about-col-1 img {
   width: 100%;
+  height: 75%;
+  object-fit: cover;
   border-radius: 15px;
 }
 
@@ -113,7 +122,6 @@ nav ul li a:hover::after {
 #carousel {
   position: relative;
   overflow: hidden;
-  height: 100vh;
 }
 .carousel-slide {
   position: absolute;
@@ -126,4 +134,283 @@ nav ul li a:hover::after {
 }
 .carousel-slide.active {
   opacity: 1;
+}
+
+.tab-titles {
+  display: flex;
+  margin: 20px 0 40px;
+}
+
+.tab-links {
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+
+.tab-links::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background: #1e90ff;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.5s;
+}
+
+.tab-links.active-link::after {
+  width: 75%;
+}
+
+.tab-contents ul li {
+  list-style: none;
+  margin: 10px 0;
+}
+
+.tab-contents ul li span {
+  color: #6495ed;
+  font-size: 16px;
+}
+
+.tab-contents {
+  display: none;
+}
+
+.tab-contents.active-tab {
+  display: block;
+}
+
+/*-------- work -------*/
+#portfolio {
+  height: 100vh;
+  width: 100%;
+}
+.work-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+}
+
+.work {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.work img {
+  width: 100%;
+  border-radius: 10px;
+  height: 60vh;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.5s;
+}
+
+.layer {
+  width: 100%;
+  height: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), #1e90ff);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  color: white;
+  transition: height 0.5s;
+}
+
+.layer h3 {
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.work:hover img {
+  transform: scale(1.1);
+}
+
+.work:hover .layer {
+  height: 100%;
+}
+
+/*----------- contact -------- */
+
+.contact-left {
+  flex-basis: 35%;
+}
+
+.contact-right {
+  flex-basis: 60%;
+}
+
+.contact-left p {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.contact-left p i {
+  color: #1e90ff;
+  margin-right: 15px;
+  font-size: 25px;
+}
+
+.social-icons {
+  margin-top: 30px;
+}
+
+.social-icons a {
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #333333;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+
+.social-icons a:hover {
+  color: #1e90ff;
+  transform: translateY(-5px);
+}
+
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #1e90ff;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #333333;
+  transition: color 1s;
+  transition: background 1s;
+}
+
+.btn:hover {
+  background: #1e90ff;
+  color: white;
+}
+
+.btn.btn2 {
+  display: inline-block;
+  background: #1e90ff;
+  color: #f8f8ff;
+}
+
+/*---------- css small screen -------- */
+
+nav .fa-solid {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  #header {
+    background-position: 80% 10%;
+    background-size: contain;
+  }
+
+  .logo {
+    font-size: 30px;
+  }
+
+  .header-text {
+    font-size: 16px;
+    margin-top: 120%;
+  }
+
+  .header-text h1 {
+    font-size: 30px;
+  }
+
+  nav .fa-solid {
+    display: block;
+    font-size: 25px;
+  }
+
+  nav .fa-solid.fa-xmark {
+    color: #f8f8ff;
+  }
+
+  nav ul {
+    background: #1e90ff;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 25px;
+  }
+
+  nav ul li a {
+    color: #f8f8ff;
+  }
+
+  nav ul .fa-solid {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+
+  .sub-title {
+    font-size: 40px;
+  }
+
+  #about {
+    height: 150vh;
+  }
+
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+
+  .about-col-1 {
+    margin-bottom: 30px;
+    height: 60vh;
+  }
+
+  .about-col-2 {
+    font-size: 14px;
+  }
+
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
+
+  .work img {
+    height: 40vh;
+  }
+
+  #portfolio {
+    height: auto;
+  }
+}
+
+#msg {
+  color: #04721c;
+  margin-top: -40px;
+  display: block;
 }
